API change in frontend

--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
             });
             
             // Submit to backend
-            fetch('http://localhost:3000/api/applications/submit', {
+            fetch('https://auypct-portal-backend.onrender.com/api/applications/submit', {
                 method: 'POST',
                 body: formData
             })
