--- a/index.html
+++ b/index.html
@@ -689,8 +689,8 @@
             <h1>AU YOUNG PROFESSIONALS CHARITABLE TRUST</h1>
             <p>NO ONE HAS EVER BECOME POOR FROM GIVING</p>
             <p>Trust Registration No: 201500130 (Registered at Chennai)</p>
-            <p>No. 34-23/810, Aatumanthai Anjalkara Street, Eastgate, Thanjavur - 613 001</p>
-            <p>Email: auytrust@gmail.com</p>
+            <p>34-23/810, Aatumanthai Anjalkara Street, Eastgate, Thanjavur - 613 001</p>
+            <p>Email: auyptrust@gmail.com</p>
         </div>
         
         <div class="form-section" id="apply-section">
