--- a/trustee.html
+++ b/trustee.html
@@ -58,7 +58,7 @@
                 <label for="password">Password</label>
             </div>
             
-            <button onclick="login()">Login</button>
+            <button onclick="login()" id="loginbtn">Login</button>
         </div>
         
         <div id="dashboard" style="display:none; position: relative;">
