Added login page, tel type

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </div>
                     <div>
                         <label>Referrer's Contact No<span class="required"></span></label>
-                        <input type="text" id="referral_contact_no" name="referral_contact_no" required>
+                        <input type="tel" id="referral_contact_no" name="referral_contact_no" oninput="validatePhone(this)" required>
                     </div>
                     <div>
                         <label>How did you know about this scheme? <span class="required"></span></label>
