in educational category id for aadhar uploading field has been fixed

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 
                 <div id="educational_docs" class="doc-section">
                     <label>Upload Aadhaar/Any ID proof with Address & Photo:</label>
-                    <input type="file" id="validateFile" name="aadhaarUpload" accept=".pdf,.jpg,.png">
+                    <input type="file" id="validateFile" name="educational_aadhaar" accept=".pdf,.jpg,.png">
                     <label>Upload Bank Passbook (First Page) - Xerox:</label>
                     <input type="file" id="validateFile" name="educational_passbook" accept=".pdf,.jpg,.png">
                     <label>Upload Marksheet/Report Card - Xerox:</label>
