--- a/track.html
+++ b/track.html
@@ -20,16 +20,10 @@
                         <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html#apply-section">Apply Scholarship</a>
+                        <a class="nav-link" href="/app.html#apply-section">Apply Scholarship</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="/track.html">Track Application</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/admin.html">Admin Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/trustee.html">Trustee Login</a>
                     </li>
                 </ul>
             </div>
